tests/snapshots/simulation_test__listing_0048_ip_register-2.snap
---
source: tests/simulation_test.rs
expression: store.register_store().register_memory_map()
---
[
    (
        "ax",
        0,
    ),
    (
        "bx",
        2000,
    ),
    (
        "cx",
        -800,
    ),
    (
        "dx",
        0,
    ),
    (
        "sp",
        0,
    ),
    (
        "bp",
        0,
    ),
    (
        "si",
        0,
    ),
    (
        "di",
        0,
    ),
]
