tests/snapshots/simulation_test__listing_0052_memory_add_loop-2.snap
---
source: tests/simulation_test.rs
expression: store.register_store().register_memory_map()
---
[
    (
        "ax",
        0,
    ),
    (
        "bx",
        6,
    ),
    (
        "cx",
        4,
    ),
    (
        "dx",
        6,
    ),
    (
        "sp",
        0,
    ),
    (
        "bp",
        1000,
    ),
    (
        "si",
        6,
    ),
    (
        "di",
        0,
    ),
]
