tests/snapshots/simulation_test__listing_0057_challenge_cycles-2.snap
---
source: tests/simulation_test.rs
expression: store.register_store().register_memory_map()
---
[
    (
        "ax",
        0,
    ),
    (
        "bx",
        1000,
    ),
    (
        "cx",
        0,
    ),
    (
        "dx",
        0,
    ),
    (
        "sp",
        0,
    ),
    (
        "bp",
        2000,
    ),
    (
        "si",
        3000,
    ),
    (
        "di",
        4000,
    ),
]
